dynamix/force-app/main/default/objects/SDR_Agent__c/SDR_Agent__c.object-meta.xml
<CustomObject>
    <label>SDR Agent</label>
    <nameField>
        <label>SDR Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDR Agents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>