dynamix/force-app/main/default/objects/SDR_Agent__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Account</fullName>
            </value>
            <value>
                <fullName>Savings Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>